fix toto11y contrast

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -45,6 +45,9 @@
  $light-grey: #eee;
  $black: #333;
  $white: #fff;
+ .btn-primary{
+  background-color: #0072ee
+ }
  
  section.content {
    margin-top: 20px;
